Grbl_Esp32/src/tests/parser-result.txt
ets Jul 29 2019 12:21:46

rst:0x1 (POWERON_RESET),boot:0x13 (SPI_FAST_FLASH_BOOT)
configsip: 0, SPIWP:0xee
clk_drv:0x00,q_drv:0x00,d_drv:0x00,cs0_drv:0x00,hd_drv:0x00,wp_drv:0x00
mode:DIO, clock div:1
load:0x3fff0018,len:4
load:0x3fff001c,len:1216
ho 0 tail 12 room 4
load:0x40078000,len:9720
ho 0 tail 12 room 4
load:0x40080400,len:6352
entry 0x400806b8

[MSG:Grbl_ESP32 Ver 1.3a Date 20200831]
[MSG:Compiled with ESP32 SDK:v3.2.3-14-gd3e562907]
[MSG:Using machine:Test Drive - Demo Only No I/O!]
[MSG:Axis count 3]
[MSG:Timed Steps]
[MSG:Init Motors]
[MSG:No spindle]

[MSG:Client Started]
[MSG:Connecting OpenWrt-Bradley]
[MSG:Connecting.]
[MSG:Connecting..]
[MSG:Connecting...]
[MSG:Connected with 192.168.2.198]
[MSG:Start mDNS with hostname:http://grblesp.local/]
[MSG:SSDP Started]
[MSG:HTTP Started]
[MSG:TELNET Started 23]

Grbl 1.3a ['$' for help]
; paste with a terminal emulator with a 200 ms delay between lines
ok
$rst=gcode
ok
$rst=#
ok
$#
[G54:0.000,0.000,0.000]
[G55:0.000,0.000,0.000]
[G56:0.000,0.000,0.000]
[G57:0.000,0.000,0.000]
[G58:0.000,0.000,0.000]
[G59:0.000,0.000,0.000]
[G28:0.000,0.000,0.000]
[G30:0.000,0.000,0.000]
[G92:0.000,0.000,0.000]
[TLO:0.000]
[PRB:0.000,0.000,0.000:0]
ok
g10 l2 p0 x0 y0 z0
ok
g10 l2 p1 x0 y0 z0
ok
g10 l2 p2 x0 y0 z0
ok
g10 l2 p3 x0 y0 z0
ok
g10 l2 p4 x0 y0 z0
ok
g10 l2 p5 x0 y0 z0
ok
g10 l2 p6 x0 y0 z0
ok
?
<Idle|MPos:0.000,0.000,0.000|FS:0,0|WCO:0.000,0.000,0.000>
ok
g0 x0 y0 z0
ok
?
<Idle|MPos:0.000,0.000,0.000|FS:0,0|Ov:100,100,100>
ok
G0
ok
G0 X1
ok
G0 I1
error:36
$G
[GC:G0 G54 G17 G21 G90 G94 M5 M9 T0 F0 S0]
ok
G1
error:22
G1 Z10
error:22
$G
[GC:G0 G54 G17 G21 G90 G94 M5 M9 T0 F0 S0]
ok
F1000
ok
$G
[GC:G0 G54 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
G1 I1
error:36
G2
error:26
G2 X0 Y0 I-1 J-1
error:33
$g
[GC:G0 G54 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
G3
error:26
G3 X0 Y0 I-1 J-1
error:33
$g
[GC:G0 G54 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g4
error:28
g4 p0
ok
g4.1
error:23
g4.2
error:23
g5
error:20
g6
error:20
g7
error:20
g8
error:20
g9
error:20
g10
error:26
g10 l1
error:26
g10 l2
error:26
g10 l2 p0
error:26
g10 l2 p0 x1 y2 z3
ok
g10 l2 p2 x2 y3 z4
ok
g10 l2 p6 x3 y4 z5
ok
$#
[G54:1.000,2.000,3.000]
[G55:2.000,3.000,4.000]
[G56:0.000,0.000,0.000]
[G57:0.000,0.000,0.000]
[G58:0.000,0.000,0.000]
[G59:3.000,4.000,5.000]
[G28:0.000,0.000,0.000]
[G30:0.000,0.000,0.000]
[G92:0.000,0.000,0.000]
[TLO:0.000]
[PRB:0.000,0.000,0.000:0]
ok
g10 l2 p6 x3 y4 z5 r1
error:20
g10 l2 p7 x5 y4 z3
error:29
g10 l20 p0 x5 y4 z3
ok
$#
[G54:-4.000,-4.000,-3.000]
[G55:2.000,3.000,4.000]
[G56:0.000,0.000,0.000]
[G57:0.000,0.000,0.000]
[G58:0.000,0.000,0.000]
[G59:3.000,4.000,5.000]
[G28:0.000,0.000,0.000]
[G30:0.000,0.000,0.000]
[G92:0.000,0.000,0.000]
[TLO:0.000]
[PRB:0.000,0.000,0.000:0]
ok
g10 l20 p6 x5 y4 z3
ok
$#
[G54:-4.000,-4.000,-3.000]
[G55:2.000,3.000,4.000]
[G56:0.000,0.000,0.000]
[G57:0.000,0.000,0.000]
[G58:0.000,0.000,0.000]
[G59:-4.000,-4.000,-3.000]
[G28:0.000,0.000,0.000]
[G30:0.000,0.000,0.000]
[G92:0.000,0.000,0.000]
[TLO:0.000]
[PRB:0.000,0.000,0.000:0]
ok
g10 l20 p7 x5 y4 z3
error:29
g10 l20 p7 x5 y4 z3
error:29
g11
error:20
g12
error:20
g13
error:20
g13
error:20
g14
error:20
g15
error:20
g16
error:20

ok
g17
ok
$g
[GC:G0 G54 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g18
ok
$g
[GC:G0 G54 G18 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g19
ok
$g
[GC:G0 G54 G19 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g17
ok

ok
g20
ok
$g
[GC:G0 G54 G17 G20 G90 G94 M5 M9 T0 F1000 S0]
ok
g21
ok
$g
[GC:G0 G54 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok

ok
g22
error:20
g23
error:20
g24
error:20
g25
error:20
g26
error:20
g27
error:20

ok
g28
ok
g28 x3
ok
$#
error:8
g28.1
ok
g28.1 x3
ok
g28.2
error:20
g29
error:20
g30 y1
ok
$#
error:8
g30.1
ok
g30.1 y2
ok
g30.2
error:20

ok
g31
error:20
g32
error:20
g33
error:20
g34
error:20
g35
error:20
g36
error:20
g37
error:20
g38
[MSG:No probe pin defined]
error:20
g39
error:20

ok
g40
ok

ok
g41
error:20
g42
error:20

ok
g43
error:20
g43.1 x0
error:37
g43.1 z2
ok
$#
[G54:-4.000,-4.000,-3.000]
[G55:2.000,3.000,4.000]
[G56:0.000,0.000,0.000]
[G57:0.000,0.000,0.000]
[G58:0.000,0.000,0.000]
[G59:-4.000,-4.000,-3.000]
[G28:0.000,0.000,0.000]
[G30:-1.000,0.000,0.000]
[G92:0.000,0.000,0.000]
[TLO:2.000]
[PRB:0.000,0.000,0.000:0]
ok

ok
g44
error:20
g45
error:20
g46
error:20
g47
error:20
g48
error:20

ok
g49
ok
$#
[G54:-4.000,-4.000,-3.000]
[G55:2.000,3.000,4.000]
[G56:0.000,0.000,0.000]
[G57:0.000,0.000,0.000]
[G58:0.000,0.000,0.000]
[G59:-4.000,-4.000,-3.000]
[G28:0.000,0.000,0.000]
[G30:-1.000,0.000,0.000]
[G92:0.000,0.000,0.000]
[TLO:0.000]
[PRB:0.000,0.000,0.000:0]
ok
g49.1
ok

ok
g50
error:20
g51
error:20
g52
error:20
g53
ok
g53 g0 x1
ok
g53.1
error:23

ok
g54
ok
$g
[GC:G0 G54 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g55
ok
$g
[GC:G0 G55 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g56
ok
$g
[GC:G0 G56 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g57
ok
$g
[GC:G0 G57 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g58
ok
$g
[GC:G0 G58 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g59 g0 x1
ok
$g
[GC:G0 G59 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok

ok
g60
error:20

ok
g61
ok
g61.1
error:20

ok
g62
error:20
g63
error:20
g64
error:20
g65
error:20
g66
error:20
g67
error:20
g68
error:20
g69
error:20
g70
error:20
g71
error:20
g72
error:20
g73
error:20
g74
error:20
g75
error:20
g76
error:20
g77
error:20
g78
error:20
g79
error:20

ok
g80
ok
$g
[GC:G80 G59 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
x1
error:31
g0 x1
ok
$g
[GC:G0 G59 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok

ok
g81
error:20
g82
error:20
g83
error:20
g84
error:20
g85
error:20
g86
error:20
g87
error:20
g88
error:20
g89
error:20

ok
g90
ok
$g
[GC:G0 G59 G17 G21 G90 G94 M5 M9 T0 F1000 S0]
ok
g90.1
error:20
g91
ok
$g
[GC:G0 G59 G17 G21 G91 G94 M5 M9 T0 F1000 S0]
ok
g91.1
ok

ok
g92
error:26
g92 z1
ok
$#
[G54:-4.000,-4.000,-3.000]
[G55:2.000,3.000,4.000]
[G56:0.000,0.000,0.000]
[G57:0.000,0.000,0.000]
[G58:0.000,0.000,0.000]
[G59:-4.000,-4.000,-3.000]
[G28:0.000,0.000,0.000]
[G30:-1.000,0.000,0.000]
[G92:0.000,0.000,2.000]
[TLO:0.000]
[PRB:0.000,0.000,0.000:0]
ok
g92.1
ok
$#
[G54:-4.000,-4.000,-3.000]
[G55:2.000,3.000,4.000]
[G56:0.000,0.000,0.000]
[G57:0.000,0.000,0.000]
[G58:0.000,0.000,0.000]
[G59:-4.000,-4.000,-3.000]
[G28:0.000,0.000,0.000]
[G30:-1.000,0.000,0.000]
[G92:0.000,0.000,0.000]
[TLO:0.000]
[PRB:0.000,0.000,0.000:0]
ok
g92.1 z0
ok
g92.2
error:20

ok
g93
ok
$g
[GC:G0 G59 G17 G21 G91 G93 M5 M9 T0 F0 S0]
ok
g94
ok
$g
[GC:G0 G59 G17 G21 G91 G94 M5 M9 T0 F0 S0]
ok

ok
g95
error:20
g96
error:20
g97
error:20
g98
error:20
g99
error:20

ok
m0
?
<Hold:0|MPos:-3.000,-2.000,0.000|FS:0,0|WCO:-4.000,-4.000,-3.000>
~
ok
ok
ok
?
<Idle|MPos:-3.000,-2.000,0.000|FS:0,0>
ok
m1
ok
m2
[MSG:Program End]
ok
?
<Idle|MPos:-3.000,-2.000,0.000|FS:0,0|WCO:-4.000,-4.000,-3.000>
ok

ok
m3
ok
$g
[GC:G1 G54 G17 G21 G90 G94 M3 M9 T0 F0 S0]
ok
m4
error:20
$g
[GC:G1 G54 G17 G21 G90 G94 M3 M9 T0 F0 S0]
ok
m5
ok
$g
[GC:G1 G54 G17 G21 G90 G94 M5 M9 T0 F0 S0]
ok

ok
m6
ok
t2
[MSG:Tool No: 2]
ok

ok
m7
ok
$g
[GC:G1 G54 G17 G21 G90 G94 M5 M9 T2 F0 S0]
ok
m8
ok
$g
[GC:G1 G54 G17 G21 G90 G94 M5 M9 T2 F0 S0]
ok
m9
ok
$g
[GC:G1 G54 G17 G21 G90 G94 M5 M9 T2 F0 S0]
ok

ok
m10
error:20
m55
error:20

ok
m56
error:20

ok
m62
error:28
m62 p0
ok
m62 p1
ok
m62 p4
ok
m62 p5
error:39

ok
m63
error:28
m63 p0
ok
m63 p1
ok
m63 p4
ok
m63 p5
error:39

